--- a/templates/Platform.html
+++ b/templates/Platform.html
@@ -2,104 +2,143 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../static/general.css" />
-    <script type="text/javascript" src="../static/alt_rows.js"></script>
-    <script type="text/javascript" src="../static/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="../static/jquery.tablesorter.js"></script>
-    <script language="javascript" type="text/javascript" src="../static/My97DatePicker/WdatePicker.js"></script>
+    <link rel="icon" href="data:image/ico;base64,aWNv">
+    <link rel="stylesheet" href="../static/css/general.css" />
+    <link rel="stylesheet" href="../static/css/main.css" />
+    <script type="text/javascript" src="../static/js/alt_rows.js"></script>
+    <script type="text/javascript" src="../static/js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="../static/js/jquery.tablesorter.js"></script>
+    <script language="javascript" type="text/javascript" src="../static/js/My97DatePicker/WdatePicker.js"></script>
     <script type="text/javascript">
         window.onload = function(){
           console.log("onload");
-          altRows('alternatecolor');
-          }
+          altRows();
+          };
+        $(document).ready(function() {
+             $(".altrowstable").tablesorter();
+             });
     </script>
     <title>Best Platform</title>
 </head>
 <body>
-    <script type="text/javascript">
-     $(document).ready(function() {
-     $(".altrowstable").tablesorter();
-     });
-    </script>
-    <h1>Best Platform</h1>
-    {%  for site in sites %}
-    <a href="javascript:void(0);" onclick="onClickItem(this, 'site')">{{site}}</a><br>
-        {% if  selected %}
-            {% if  selected.Site == site %}
-                {%  for pf in platforms %}
-                    &nbsp;&nbsp;<a href="javascript:void(0);" onclick="onClickPlatform(this, '{{ site }}')">{{ pf }}</a>
-                {% endfor %}
-                <br>
-            {%  endif %}
-        {%  endif %}
-    {%  endfor %}
-    <hr>
-    {% if selected %}
-        <div><label class="pf_label">Site: </label><label class="sitename">{{ selected.Site }}</label></div>
-        <div><label class="pf_label">Platform: </label><label class="platformname">{{ selected.Platform }}</label></div>
-        <div>
-            <label class="pf_label">Description: </label>
-            <input type="text" class='description' value="{{ selected.Description }}" />
-        </div>
-        <div>
-            <label class="pf_label">Owner: </label>
-            <input type="text" class='owner' value="{{ selected.Owner }}" />
+    <div >
+        <div class="uk-flex-item-none x-sidebar-left" style="margin:5px;position:fixed;top:0;bottom:0">
+            <div class="uk-float-right" style="padding-top:5px">
+                <a href="#0" onclick="expandWikiNode($('#x-wiki-index>div>i'), true)" style="margin-left:5px">
+                    <i class="uk-icon-expand"></i>
+                </a>
+                <a href="#0" onclick="collapseWikiNode($('#x-wiki-index>div>i'), true)" style="margin-left:5px">
+                    <i class="uk-icon-compress"></i>
+                </a>
             </div>
-        <!--<div ><label>Validity: </label><input type="date" class="validity" value="{{ selected.Validity }}"/></div> -->
-        <div class="validity">
-            <label class="pf_label">Validity: </label>
-            <!--<input type="date" value="2019-01-01" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'});javascript:{$('#eta').trigger('change')}"/> -->
-            <input id="select-date" class="Wdate" value="{{ selected.Validity }}" onfocus="onClickSelectDate(this, this.parentNode)"/>
-            <span></span>
+            <ul class="uk-nav uk-nav-side">
+                <li class="uk-nav-header" id="best-platform">Best Platform</li>
+            </ul>
+            <ul id="x-wiki-index" class="uk-nav uk-nav-side" style="margin-right:-15px;">
+                {%  for site in sites %}
+                  <div id="menu-{{ site.site_name }}" depth="0" style="position:relative;margin-left:15px;" class="uk-active" expand="true">
+                    <i onclick="toggleWikiNode(this)" class="uk-icon-minus-square-o" style="position:absolute;margin-left:-1em;padding-top:8px;"></i>
+                    <a href="#div-{{ site.site_name }}" class="x-wiki-index-item">{{site.site_name}}</a>
+                    {%  for pf in site.pfs %}
+                        <div id="menu-{{ pf.pf_name }}" depth="1" style="position: relative; margin-left: 15px;">
+                            <a href="#div-{{ site.site_name }}-{{ pf.pf_name }}" class="x-wiki-index-item">{{ pf.pf_name }}</a>
+                        </div>
+                    {% endfor %}
+                    </div>
+                {% endfor %}
+            </ul>
         </div>
-        <div>
-          <button value="提交" onclick="submit_platform('{{ selected.Site }}', '{{ selected.Platform }}')">提交</button>
+
+        <div class="right_content">
+        {%  for site in sites %}
+            <div id="div-{{ site.site_name }}">
+            {%  for pf in site.pfs %}
+             <div id="div-{{ site.site_name }}-{{ pf.pf_name }}" class="content_item">
+                <div class="info_line">
+                {%  ifnotequal site.site_name 'ORPHAN' %}
+                <label class="pf_label">Site: </label><label class="sitename uk-panel-title" >{{ site.site_name }}</label>
+                {% else %}
+                <label class="uk-h3">{{ site.site_name }}</label>
+                {% endifnotequal %}
+                </div>
+                {%  ifnotequal site.site_name 'ORPHAN' %}
+                <div class="info_line">
+                    <label class="pf_label">Platform: </label>
+                    <label class="platformname uk-panel-title">{{ pf.pf_name }}</label>
+                </div>
+                <div class="info_line">
+                    <label class="pf_label">Description: </label>
+                    <input type="text" class='description' value="{{ pf.desc }}" />
+                </div>
+                <div class="info_line">
+                    <label class="pf_label">Owner: </label>
+                    <input type="text" class='owner' value="{{ pf.owner }}" />
+                    </div>
+                <!--<div ><label>Validity: </label><input type="date" class="validity" value="{{ selected.Validity }}"/></div> -->
+                <div class="info_line validity">
+                    <label class="pf_label">Validity: </label>
+                    <!--<input type="date" value="2019-01-01" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'});javascript:{$('#eta').trigger('change')}"/> -->
+                    <input id="select-date-{{ site.site_name }}-{{ pf.pf_name }}" class="Wdate" value="{{ pf.valid|date:"Y-m-d" }}" onfocus="onClickSelectDate(this, this.parentNode)"/>
+                    <span></span>
+                </div>
+                <div class="info_line">
+                    <button value="submit" onclick="submit_platform('{{ site.site_name }}', '{{ pf.pf_name }}', this)">submit</button>
+                    <label id="error_label"></label>
+                </div>
+                {% endifnotequal %}
+
+                <br>
+
+                <div id="res" style="margin: 10px">
+                    <table class="altrowstable" id="table-{{ site.site_name }}-{{ pf.pf_name }}">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <!--<th>Os</th> -->
+                                <th>OPS_Name</th>
+                                <!--<th>Structure</th> -->
+                                <th>Host</th>
+                                <th>Reachable</th>
+                                <!--<th>Controlled</th> -->
+                                <!--<th>Id_in_host</th> -->
+                                <th>Running</th>
+                                <!--<th>IP</th> -->
+                                <!--<th>Interface</th> -->
+                                <th>Thalix</th>
+                                <th>Display</th>
+                                <th>Config</th>
+                                <th>CSCI</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {%  for item in pf.nodes %}
+                            <tr id={{ forloop.counter }} onmouseover="this.style.backgroundColor='#ffff66';" onmouseout="altRow(this)">
+                            <td class='itemvalue'>{{item.Name}}</td>
+                            <!--<td class='itemvalue'>{{item.Os}}</td>-->
+                            <td class='itemvalue'>{{item.OPS_Name}}</td>
+                            <!--<td class='itemvalue'>{{item.Structure}}</td>-->
+                            <td class='itemvalue'>{{item.Host}}</td>
+                            <td class='itemvalue'>{{item.Reachable}}</td>
+                            <!--<td class='itemvalue'>{{item.Controlled}}</td>-->
+                            <!--<td class='itemvalue'>{{item.Id_in_host}}</td>-->
+                            <td class='itemvalue'>{{item.Running}}</td>
+                            <!--<td class='itemvalue'>{{item.IP}}</td>-->
+                            <!--<td class='itemvalue'>{{item.Interface}}</td>-->
+                            <td class='itemvalue'>{{item.Thalix}}</td>
+                            <td class='itemvalue'>{{item.X_server.Host}}&nbsp;{{item.X_server.Tty}}</td>
+                            <!--<td class='itemvalue'>{{item.Display}}</td>-->
+                            <td class='itemvalue'>{{item.Config}}</td>
+                            <td class='itemvalue'>{{item.CSCI}}</td>
+                            </tr>
+                            {%  endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                </div>
+            {% endfor %}
+            </div>
+        {% endfor %}
         </div>
-        <br>
-    {%  endif %}
-    <div id="res">
-        <table class="altrowstable" id="alternatecolor">
-        <thead>
-        <tr>
-            <th>Name</th>
-            <!--<th>Os</th> -->
-            <th>OPS_Name</th>
-            <!--<th>Structure</th> -->
-            <th>Host</th>
-            <th>Reachable</th>
-            <!--<th>Controlled</th> -->
-            <!--<th>Id_in_host</th> -->
-            <th>Running</th>
-            <!--<th>IP</th> -->
-            <!--<th>Interface</th> -->
-            <th>Thalix</th>
-            <th>Display</th>
-            <th>Config</th>
-            <th>CSCI</th>
-        </tr>
-        </thead>
-        <tbody>
-            {%  for item in nodes %}
-            <tr id={{ forloop.counter }} onmouseover="this.style.backgroundColor='#ffff66';" onmouseout="altRow(this)">
-            <td class='itemvalue'>{{item.Name}}</td>
-            <!--<td class='itemvalue'>{{item.Os}}</td>-->
-            <td class='itemvalue'>{{item.OPS_Name}}</td>
-            <!--<td class='itemvalue'>{{item.Structure}}</td>-->
-            <td class='itemvalue'>{{item.Host}}</td>
-            <td class='itemvalue'>{{item.Reachable}}</td>
-            <!--<td class='itemvalue'>{{item.Controlled}}</td>-->
-            <!--<td class='itemvalue'>{{item.Id_in_host}}</td>-->
-            <td class='itemvalue'>{{item.Running}}</td>
-            <!--<td class='itemvalue'>{{item.IP}}</td>-->
-            <!--<td class='itemvalue'>{{item.Interface}}</td>-->
-            <td class='itemvalue'>{{item.Thalix}}</td>
-            <td class='itemvalue'>{{item.Display}}</td>
-            <td class='itemvalue'>{{item.Config}}</td>
-            <td class='itemvalue'>{{item.CSCI}}</td>
-            </tr>
-            {%  endfor %}
-        </tbody>
-        </table>
-        </div>
+    </div>
 </body>
 </html>
