--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4069,11 +4069,13 @@ select.uk-form-width-mini {
 }
 .uk-icon-check:before {
   content: "\f00c";
+  color: green;
 }
 .uk-icon-remove:before,
 .uk-icon-close:before,
 .uk-icon-times:before {
   content: "\f00d";
+  color: red;
 }
 .uk-icon-search-plus:before {
   content: "\f00e";
