--- a/templates/Platform.html
+++ b/templates/Platform.html
@@ -37,7 +37,9 @@
             <ul id="x-wiki-index" class="uk-nav uk-nav-side" style="margin-right:-15px;">
                 {%  for site in sites %}
                   <div id="menu-{{ site.site_name }}" depth="0" style="position:relative;margin-left:15px;" class="uk-active" expand="true">
+                    {% ifnotequal site 'ORPHAN' %}
                     <i onclick="toggleWikiNode(this)" class="uk-icon-minus-square-o" style="position:absolute;margin-left:-1em;padding-top:8px;"></i>
+                    {% endifnotequal %}
                     <a href="#div-{{ site.site_name }}" class="x-wiki-index-item">{{site.site_name}}</a>
                     {%  for pf in site.pfs %}
                         <div id="menu-{{ pf.pf_name }}" depth="1" style="position: relative; margin-left: 15px;">
@@ -84,6 +86,7 @@
                 <div class="info_line">
                     <button value="submit" onclick="submit_platform('{{ site.site_name }}', '{{ pf.pf_name }}', this)">submit</button>
                     <label id="error_label"></label>
+                    <input type="hidden" id="last-modified-{{ site.site_name }}-{{ pf.pf_name }}" value="{{ pf.last_mod }}"/>
                 </div>
                 {% endifnotequal %}
 
