--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Platform Mapping</title>
     <style>
         input {
             padding: 10px;
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <h1>Best Platform</h1>
+    <h1>Platform Mapping</h1>
     <hr>
     <ul>
         <li>
